--- a/explorer_intres.rc
+++ b/explorer_intres.rc
@@ -179,6 +179,7 @@ IDI_TRAY_NET_WIRED_DIS          ICON            "res/tray_network_wired_dis.ico"
 IDI_TRAY_NET_WIRED_LAN          ICON            "res/tray_network_wired_lan.ico"
 IDI_TRAY_NET_WIRED_INTERNET     ICON            "res/tray_network_wired_internet.ico"
 IDI_TRAY_NET_WIRELESS_DIS       ICON            "res/tray_network_wireless_dis.ico"
+IDI_TRAY_NET_WIRELESS_NOCONN    ICON            "res/tray_network_wireless_noconn.ico"
 IDI_TRAY_NET_WIRELESS_LAN       ICON            "res/tray_network_wireless_lan.ico"
 //IDI_TRAY_NET_WIRELESS_INTERNET  ICON            "res/tray_network_wireless_internet.ico"
 IDI_TRAY_NET_SIGNAL_NONE        ICON            "res/tray_network_signal_0.ico"
