--- a/WinXShell_VS2015.vcxproj.filters
+++ b/WinXShell_VS2015.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="DUI\SUIModule.cpp">
       <Filter>DUI</Filter>
     </ClCompile>
+    <ClCompile Include="DUI\Helper.cpp">
+      <Filter>DUI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -188,6 +191,9 @@
       <Filter>DUI</Filter>
     </ClInclude>
     <ClInclude Include="DUI\SUIModule.h">
+      <Filter>DUI</Filter>
+    </ClInclude>
+    <ClInclude Include="DUI\Helper.h">
       <Filter>DUI</Filter>
     </ClInclude>
   </ItemGroup>
