--- a/explorer_intres.rc
+++ b/explorer_intres.rc
@@ -132,6 +132,8 @@ IDI_EXPLORER            ICON                    "res/explorer.ico"
 IDI_COMPUTER            ICON                    "res/computer.ico"
 IDI_STARTMENU_W         ICON                    "res/startmenu_w.ico"
 IDI_STARTMENU_B         ICON                    "res/startmenu_b.ico"
+IDI_SM_CUSTOM_1         ICON                    "res/sm_custom_1.ico"
+IDI_SM_CUSTOM_2         ICON                    "res/sm_custom_2.ico"
 IDI_LOGOFF              ICON                    "res/logoff.ico"
 IDI_SHUTDOWN            ICON                    "res/shutdown.ico"
 IDI_TERMINATE           ICON                    "res/terminate.ico"
@@ -170,6 +172,7 @@ IDI_NETCONNS            ICON                    "res/network-conns.ico"
 IDI_ADMIN               ICON                    "res/administration.ico"
 IDI_RECENT              ICON                    "res/recent-documents.ico"
 IDI_EMPTY               ICON                    "res/empty.ico"
+IDI_EMPTY2              ICON                    "res/empty.ico"
 IDI_TRAY_SND_NONE       ICON                    "res/snd_none.ico"
 IDI_TRAY_SND_MUTE       ICON                    "res/snd_mute.ico"
 IDI_TRAY_SND_SMALL      ICON                    "res/snd_s.ico"
