--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
-.gitignore
 *.opensdf
+*.db
 *.sdf
 *.user
 .vs/
 ipch/
 Win32/
 x64/
+vendor/
+wxsUI/*.*
+lua_helper/*.bat
+lua_helper/*.exe
+lua_helper/x86/
+lua_helper/x64/
+wallpaper.jpg
+wxsStub.dll
+wxsStub32.dll
+UI_Debug.bat
