--- a/WinXShell_VS2015.vcxproj.filters
+++ b/WinXShell_VS2015.vcxproj.filters
@@ -139,6 +139,12 @@
     <ClCompile Include="utility\FolderOptions.cpp">
       <Filter>utility</Filter>
     </ClCompile>
+    <ClCompile Include="vendor\winapi\winapi.c">
+      <Filter>vendor\winapi</Filter>
+    </ClCompile>
+    <ClCompile Include="vendor\winapi\wutils.c">
+      <Filter>vendor\winapi</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -271,6 +277,9 @@
     </ClInclude>
     <ClInclude Include="utility\FolderOptions.h">
       <Filter>utility</Filter>
+    </ClInclude>
+    <ClInclude Include="vendor\winapi\wutils.h">
+      <Filter>vendor\winapi</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -513,6 +522,9 @@
     </Filter>
     <Filter Include="customization">
       <UniqueIdentifier>{c97ad327-f251-42a8-9d1d-c106f26bf713}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="vendor\winapi">
+      <UniqueIdentifier>{6378234b-651b-4dc3-8021-a89a4460dc64}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
