add IDI_TRAY_DARK_NET_WIRELESS_NOCONN_LEGACY resource

--- a/explorer_intres.rc
+++ b/explorer_intres.rc
@@ -196,6 +196,7 @@ IDI_TRAY_NET_WIRED_DIS          ICON            "res/tray_network_wired_dis.ico"
 IDI_TRAY_NET_WIRED_LAN          ICON            "res/tray_network_wired_lan.ico"
 IDI_TRAY_NET_WIRED_INTERNET     ICON            "res/tray_network_wired_internet.ico"
 IDI_TRAY_NET_WIRELESS_DIS       ICON            "res/tray_network_wireless_dis.ico"
+IDI_TRAY_NET_WIRELESS_NOCONN_LEGACY   ICON      "res/tray_network_wireless_noconn_legacy.ico"
 IDI_TRAY_NET_WIRELESS_NOCONN    ICON            "res/tray_network_wireless_noconn.ico"
 IDI_TRAY_NET_WIRELESS_LAN       ICON            "res/tray_network_wireless_lan.ico"
 //IDI_TRAY_NET_WIRELESS_INTERNET  ICON            "res/tray_network_wireless_internet.ico"
@@ -209,6 +210,7 @@ IDI_TRAY_DARK_NET_WIRED_DIS          ICON            "res/dark/tray_network_wire
 IDI_TRAY_DARK_NET_WIRED_LAN          ICON            "res/dark/tray_network_wired_lan.ico"
 IDI_TRAY_DARK_NET_WIRED_INTERNET     ICON            "res/dark/tray_network_wired_internet.ico"
 IDI_TRAY_DARK_NET_WIRELESS_DIS       ICON            "res/dark/tray_network_wireless_dis.ico"
+IDI_TRAY_DARK_NET_WIRELESS_NOCONN_LEGACY   ICON      "res/dark/tray_network_wireless_noconn_legacy.ico"
 IDI_TRAY_DARK_NET_WIRELESS_NOCONN    ICON            "res/dark/tray_network_wireless_noconn.ico"
 IDI_TRAY_DARK_NET_WIRELESS_LAN       ICON            "res/dark/tray_network_wireless_lan.ico"
 //IDI_TRAY_DARK_NET_WIRELESS_INTERNET  ICON            "res/dark/tray_network_wireless_internet.ico"
