--- a/WinXShell_VS2015.vcxproj.filters
+++ b/WinXShell_VS2015.vcxproj.filters
@@ -151,6 +151,9 @@
     <ClCompile Include="systemsettings\DesktopCommand.cpp">
       <Filter>systemsettings</Filter>
     </ClCompile>
+    <ClCompile Include="taskbar\thumbnail.cpp">
+      <Filter>taskbar</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
